widget: fix mouse wrapping failing when the window is outside

Use a anchor mouse position after every move, similar to spicec to
avoid reaching transparent border on the screen.

We try to move to the center of the screen, but
gdk_display_warp_pointer () will move the cursor within the grabbed
window (so it still receives mouse events even on Windows)

Tested with Linux and Windows clients.

Fixes bug: https://bugs.freedesktop.org/show_bug.cgi?id=45595